--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Divyanth Jayaraj",
   "license": "ISC",
   "devDependencies": {
-    "jasmine": "^2.5.2"
+    "karma": "^1.3.0",
+    "karma-browserify": "^5.1.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2"
   }
 }
