--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "karma-browserify": "^5.1.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2"
+  },
+  "dependencies": {
+    "node-static": "^0.7.9"
   }
 }
