Added protractor tests

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Hello world app for angular with unit testing",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "test": "protractor protractor.conf.js"
   },
   "author": "Divyanth Jayaraj",
   "license": "ISC",
